src/LughatDad/LughatDad.java
/* LughatDad.java */
/* Generated By:JavaCC: Do not edit this line. LughatDad.java */
package LughatDad;
import java.util.*;


interface Node {
    void execute();
}

interface ExprNode {
    double evaluate();
}

class NumberNode implements ExprNode {
    double value;
    NumberNode(double v) { this.value = v; }
    public double evaluate() { return value; }
}

class VariableNode implements ExprNode {
    String name;
    VariableNode(String n) { this.name = n; }
    public double evaluate() { return LughatDad.symbolTable.getOrDefault(name, 0.0); }
}

class MathNode implements ExprNode {
    ExprNode left, right;
    String op;
    MathNode(ExprNode l, String op, ExprNode r) { this.left = l; this.op = op; this.right = r; }
    public double evaluate() {
        if (op.equals("+")) return left.evaluate() + right.evaluate();
        if (op.equals("-")) return left.evaluate() - right.evaluate();
        if (op.equals("*")) return left.evaluate() * right.evaluate();
        if (op.equals("/")) return left.evaluate() / right.evaluate();
        return 0.0;
    }
}
class RepeatNode implements Node {
    ExprNode countExpr;
    List<Node> body;

    RepeatNode(ExprNode countExpr, List<Node> body) {
        this.countExpr = countExpr;
        this.body = body;
    }

    public void execute() {
        int limit = (int) countExpr.evaluate();
        for (int i = 0; i < limit; i++) {
            for (Node n : body) {
                n.execute();
            }
        }
    }
}

class PrintNode implements Node {
    ExprNode exp = null;
    String literal = null;
    PrintNode(ExprNode e) { this.exp = e; }
    PrintNode(String s) { this.literal = s; }
    public void execute() {
        if (literal != null) System.out.println(literal);
        else System.out.println(exp.evaluate());
        System.out.flush();
    }
}

class AssignNode implements Node {
    String varName;
    ExprNode expression;
    AssignNode(String varName, ExprNode expr) { this.varName = varName; this.expression = expr; }
    public void execute() {
        LughatDad.symbolTable.put(varName, expression.evaluate());
    }
}

class IfNode implements Node {
    String varName, op;
    ExprNode target;
    List<Node> trueBlock;
    List<Node> elseBlock;
   IfNode(String varName, String op, ExprNode target, List<Node> trueBlock, List<Node> elseBlock) {
        this.varName = varName;
        this.op = op;
        this.target = target;
        this.trueBlock = trueBlock;
        this.elseBlock = elseBlock;
    }
public void execute() {
        double currentVal = LughatDad.symbolTable.getOrDefault(varName, 0.0);
        if (LughatDad.compare(currentVal, op, target.evaluate())) {
            for (Node n : trueBlock) n.execute();
        }
        else if (elseBlock != null) {
            for (Node n : elseBlock) n.execute();
        }
    }
}
class WhileNode implements Node {
    String varName, op;
    ExprNode target;
    List<Node> body;
    WhileNode(String varName, String op, ExprNode target, List<Node> body) {
        this.varName = varName; this.op = op; this.target = target; this.body = body;
    }
    public void execute() {
        while (LughatDad.compare(LughatDad.symbolTable.getOrDefault(varName, 0.0), op, target.evaluate())) {
            for (Node n : body) n.execute();
        }
    }


    }


public class LughatDad implements LughatDadConstants {
    public static HashMap<String, Double> symbolTable = new HashMap<String, Double>();

    public static boolean compare(double left, String op, double right) {
        if (op.equals(">")) return left > right;
        if (op.equals("<")) return left < right;
        if (op.equals("==")) return left == right;
        if (op.equals("!=")) return left != right;
        if (op.equals(">=")) return left >= right;
        if (op.equals("<=")) return left <= right;
        return false;
    }

public static void main(String[] args) {
    try {
        // --- 1. Force UTF-8 Encoding for the Output Streams ---
        System.setOut(new java.io.PrintStream(System.out, true, "UTF-8"));
        System.setErr(new java.io.PrintStream(System.err, true, "UTF-8"));

        // Prints: "      مترجم لغة ضاد | LughatDad      "
        System.out.println("      \u0645\u062a\u0631\u062c\u0645 \u0644\u063a\u0629 \u0636\u0627\u062f | LughatDad      ");
        System.out.println("\n");

        LughatDad parser = new LughatDad(System.in, "UTF-8");

        parser.program();

    } catch (java.io.UnsupportedEncodingException e) {
        // Fallback if UTF-8 fails
        System.err.println("Encoding Error: UTF-8 not supported.");
    } catch (ParseException e) {
        // "خطأ إملائي: تأكد من الفواصل المنقوطة والأقواس."
        System.err.println("\u062e\u0637\u0623 \u0625\u0645\u0644\u0627\u0626\u064a: \u062a\u0623\u0643\u062f \u0645\u0646 \u0627\u0644\u0641\u0648\u0627\u0635\u0644 \u0627\u0644\u0645\u0646\u0642\u0648\u0637\u0629 \u0648\u0627\u0644\u0623\u0642\u0648\u0627\u0633.");
    } catch (TokenMgrError e) {
        // "رمز غير معروف: أدخلت حرفا غير مدعوم."
        System.err.println("\u0631\u0645\u0632 \u063a\u064a\u0631 \u0645\u0631\u0646\u0648\u0641: \u0623\u062f\u062e\u0644\u062a \u062d\u0631\u0641\u0627 \u063a\u064a\u0631 \u0645\u062f\u0639\u0648\u0645.");
    } catch (Exception e) {
        // "حدث خطأ: "
        System.err.println("\u062d\u062f\u062b \u062e\u0637\u0623: " + e.getMessage());
    }
}

// grammer
  static final public 
void program() throws ParseException {Node n;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUTA_GHAYYER:
      case ITBA3:
      case ETHA:
      case BAYNAMA:
      case KARREER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n = statement();
if (n != null) n.execute();
    }
    jj_consume_token(0);
}

  static final public Node repeatStmt() throws ParseException {ExprNode count;
  Node n;
  List<Node> bodyList = new ArrayList<Node>();
    jj_consume_token(KARREER);
    jj_consume_token(LP);
    count = expression();
    jj_consume_token(RP);
    jj_consume_token(LB);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUTA_GHAYYER:
      case ITBA3:
      case ETHA:
      case BAYNAMA:
      case KARREER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      n = statement();
bodyList.add(n);
    }
    jj_consume_token(RB);
{if ("" != null) return new RepeatNode(count, bodyList);}
    throw new Error("Missing return statement in function");
}

  static final public Node statement() throws ParseException {Node n;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MUTA_GHAYYER:{
      n = declaration();
      break;
      }
    case IDENTIFIER:{
      n = assignment();
      break;
      }
    case ITBA3:{
      n = printStmt();
      break;
      }
    case ETHA:{
      n = ifStmt();
      break;
      }
    case BAYNAMA:{
      n = whileStmt();
      break;
      }
    case KARREER:{
      n = repeatStmt();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode expression() throws ParseException {ExprNode v, n;
    v = term();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        n = term();
v = new MathNode(v, "+", n);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        n = term();
v = new MathNode(v, "-", n);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return v;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode term() throws ParseException {ExprNode v, n;
    v = unary();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:{
        jj_consume_token(MULTIPLY);
        n = unary();
v = new MathNode(v, "*", n);
        break;
        }
      case DIVIDE:{
        jj_consume_token(DIVIDE);
        n = unary();
v = new MathNode(v, "/", n);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return v;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode unary() throws ParseException {ExprNode v;
    v = primary();
{if ("" != null) return v;}
    throw new Error("Missing return statement in function");
}

  static final public ExprNode primary() throws ParseException {Token t; ExprNode v;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
      t = jj_consume_token(NUMBER);
String n = t.image.replace('\u0661','1').replace('\u0662','2').replace('\u0663','3')
                      .replace('\u0664','4').replace('\u0665','5').replace('\u0666','6')
                      .replace('\u0667','7').replace('\u0668','8').replace('\u0669','9').replace('\u0660','0');
    {if ("" != null) return new NumberNode(Double.parseDouble(n));}
      break;
      }
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new VariableNode(t.image);}
      break;
      }
    case LP:{
      jj_consume_token(LP);
      v = expression();
      jj_consume_token(RP);
{if ("" != null) return v;}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Node declaration() throws ParseException {Token t; ExprNode node;
    jj_consume_token(MUTA_GHAYYER);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGN);
    node = expression();
    jj_consume_token(SC);
LughatDad.symbolTable.put(t.image, 0.0);
    {if ("" != null) return new AssignNode(t.image, node);}
    throw new Error("Missing return statement in function");
}

  static final public Node assignment() throws ParseException {Token t; ExprNode node;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGN);
    node = expression();
    jj_consume_token(SC);
{if ("" != null) return new AssignNode(t.image, node);}
    throw new Error("Missing return statement in function");
}

  static final public Node printStmt() throws ParseException {ExprNode exp;
  Token t;
  Node res = null;
    jj_consume_token(ITBA3);
    jj_consume_token(LP);
    if (jj_2_1(2)) {
      exp = expression();
res = new PrintNode(exp);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STRING:{
        t = jj_consume_token(STRING);
res = new PrintNode(t.image.substring(1, t.image.length()-1));
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RP);
    jj_consume_token(SC);
{if ("" != null) return res;}
    throw new Error("Missing return statement in function");
}

  static final public Node ifStmt() throws ParseException {Token tVar, tOp;
  ExprNode target;
  Node n;
  List<Node> trueBlock = new ArrayList<Node>();
  List<Node> elseBlock = null;
    jj_consume_token(ETHA);
    jj_consume_token(LP);
    tVar = jj_consume_token(IDENTIFIER);
    tOp = relOp();
    target = expression();
    jj_consume_token(RP);
    jj_consume_token(LB);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUTA_GHAYYER:
      case ITBA3:
      case ETHA:
      case BAYNAMA:
      case KARREER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      n = statement();
trueBlock.add(n);
    }
    jj_consume_token(RB);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WA_ELLA:{
      jj_consume_token(WA_ELLA);
elseBlock = new ArrayList<Node>();
      jj_consume_token(LB);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MUTA_GHAYYER:
        case ITBA3:
        case ETHA:
        case BAYNAMA:
        case KARREER:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        n = statement();
elseBlock.add(n);
      }
      jj_consume_token(RB);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
{if ("" != null) return new IfNode(tVar.image, tOp.image, target, trueBlock, elseBlock);}
    throw new Error("Missing return statement in function");
}

  static final public Node whileStmt() throws ParseException {Token tVar, tOp;
  ExprNode target;
  Node n;
  List<Node> bodyList = new ArrayList<Node>();
    jj_consume_token(BAYNAMA);
    jj_consume_token(LP);
    tVar = jj_consume_token(IDENTIFIER);
    tOp = relOp();
    target = expression();
    jj_consume_token(RP);
    jj_consume_token(LB);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUTA_GHAYYER:
      case ITBA3:
      case ETHA:
      case BAYNAMA:
      case KARREER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_7;
      }
      n = statement();
bodyList.add(n);
    }
    jj_consume_token(RB);
{if ("" != null) return new WhileNode(tVar.image, tOp.image, target, bodyList);}
    throw new Error("Missing return statement in function");
}

  static final public Token relOp() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GT:{
      t = jj_consume_token(GT);
      break;
      }
    case LT:{
      t = jj_consume_token(LT);
      break;
      }
    case EQ:{
      t = jj_consume_token(EQ);
      break;
      }
    case NEQ:{
      t = jj_consume_token(NEQ);
      break;
      }
    case GE:{
      t = jj_consume_token(GE);
      break;
      }
    case LE:{
      t = jj_consume_token(LE);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_primary_272_3_20()
 {
    if (jj_scan_token(LP)) return true;
    if (jj_3R_expression_247_3_8()) return true;
    return false;
  }

  static private boolean jj_3R_primary_271_3_19()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_expression_247_3_8()
 {
    if (jj_3R_term_254_3_9()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_expression_248_5_10()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_primary_265_3_18()
 {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  static private boolean jj_3R_primary_265_3_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_primary_265_3_18()) {
    jj_scanpos = xsp;
    if (jj_3R_primary_271_3_19()) {
    jj_scanpos = xsp;
    if (jj_3R_primary_272_3_20()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_unary_261_3_11()
 {
    if (jj_3R_primary_265_3_15()) return true;
    return false;
  }

  static private boolean jj_3R_term_256_5_17()
 {
    if (jj_scan_token(DIVIDE)) return true;
    return false;
  }

  static private boolean jj_3R_term_255_5_16()
 {
    if (jj_scan_token(MULTIPLY)) return true;
    return false;
  }

  static private boolean jj_3R_term_255_5_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_term_255_5_16()) {
    jj_scanpos = xsp;
    if (jj_3R_term_256_5_17()) return true;
    }
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_expression_247_3_8()) return true;
    return false;
  }

  static private boolean jj_3R_term_254_3_9()
 {
    if (jj_3R_unary_261_3_11()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_term_255_5_12()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_expression_249_5_14()
 {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3R_expression_248_5_10()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_expression_248_5_13()) {
    jj_scanpos = xsp;
    if (jj_3R_expression_249_5_14()) return true;
    }
    return false;
  }

  static private boolean jj_3R_expression_248_5_13()
 {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public LughatDadTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[14];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x32e0,0x32e0,0x32e0,0x600000,0x600000,0x1800000,0x1800000,0x26000,0x8000,0x32e0,0x32e0,0x100,0x32e0,0x7e000000,};
	}
  static final private JJCalls[] jj_2_rtns = new JJCalls[1];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public LughatDad(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public LughatDad(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new LughatDadTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public LughatDad(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new LughatDadTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new LughatDadTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public LughatDad(LughatDadTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(LughatDadTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
